# cth

./: .clang-format  .clang-tidy  .clang_tidy  .editorconfig  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Directory.build.props  Folder.DotSettings  README.md  compileData.scor  compileData.scor.t0000  concepts.hpp  cth.sln  cth.vcxproj  cth.vcxproj.filters  main.cpp  math.cpp  math.hpp  type_traits.hpp  uncrustify.cfg  vcpkg.json
cth_coro/: CMakeLists.txt
cth_coro/incl/cth/coro/: concepts.hpp  exception.hpp  executor.hpp  executor_task.hpp  schedule_awaiter.hpp  scheduler.hpp  sync.hpp  this_coro.hpp  utility.hpp
cth_coro/incl/cth/coro/awaiters/: data_awaiter.hpp  executor_awaiter.hpp  executor_awaiter_base.hpp  final_sync_awaiter.hpp  native_handle_awaiter.hpp  schedule_awaiter.hpp  this_coro_awaiter.hpp  this_coro_awaiter_base.hpp  wait_awaiter.hpp
cth_coro/incl/cth/coro/base/: executor_awaiter_base.hpp  executor_promise_base.hpp
cth_coro/incl/cth/coro/dev/: basic_promise.hpp  capture_task.hpp  executor_fwd.hpp  executor_task_decl.hpp  final_awaiter.hpp  result_storage.hpp  scheduled_task.hpp  unique_handle.hpp
cth_coro/incl/cth/coro/func/: steal.hpp
cth_coro/incl/cth/coro/os/: native_handle.hpp
cth_coro/incl/cth/coro/sync/: fence.hpp
cth_coro/src/: main.cpp
cth_coro/src/coro/: scheduler.cpp
cth_coro/src/coro/os/: native_handle.cpp
cth_coro/src/coro/utility/: boost.hpp  native_handle_helpers.hpp  timer_pool.hpp  win_adapted_timer.hpp
cth_coro/tests/: CMakeLists.txt
cth_coro/tests/src/: scheduler_test.cpp  sync_test.cpp
cth_coro/tests/src/tasks/: sync_task_test.cpp
cth_coro/tests/src/this_coro/: test.hpp
cth_coro/tests/src/util/: os_test_utilty.hpp
cth_coro_tests/: CMakeLists.txt
cth_coro_tests/src/: executor_itest.cpp  executor_test.cpp  scheduler_itest.cpp  scheduler_test.cpp  sync_test.cpp  test.hpp  this_coro.cpp
cth_coro_tests/src/awaiters/: awaiters_test.cpp  native_handle_awaiter_test.cpp
cth_coro_tests/src/tasks/: sync_task_test.cpp
cth_coro_tests/src/this_coro/: test.hpp  this_coro_promise_base_test.cpp
cth_coro_tests/src/this_coro/tags/: executor_tag_test.cpp  scheduler_tag_test.cpp  test.hpp  wait_tag_test.cpp
cth_coro_tests/src/util/: os_test_utilty.hpp
cth_cthm/: CMakeLists.txt
cth_cthm/incl/cthm/macro/: compilation.hpp  format.hpp  hash.hpp  log.hpp  os.hpp  utility.hpp
cth_cthm/modules/: cth.algorithm.cppm  cth.chrono.cppm  cth.constants.cppm  cth.coro.cppm  cth.cppm  cth.data.cppm  cth.exception.cppm  cth.hash.cppm  cth.io.cppm  cth.meta.cppm  cth.string.cppm
cth_cthm/modules/algorithm/: cth.algorithm-combine.cppm  cth.algorithm-ranges.cppm  cth.algorithm-views.cppm
cth_cthm/modules/coro/: cth.coro.fence.cppm  cth.coro.global_switch.cppm  cth.coro.unique_cohandle.cppm  cth.coro.utility.cppm
cth_cthm/modules/data/: cth.data.joiner.cppm  cth.data.miniram.cppm  cth.data.optional.cppm  cth.data.poly_vector.cppm  cth.data.pool.cppm  cth.data.union_find.cppm
cth_cthm/modules/data/miniram/: cth.data.miniram-decl.cppm  cth.data.miniram-inl.cppm
cth_cthm/modules/io/: cth.io-console.cppm  cth.io-keybd.keys.cppm  cth.io-log.cppm
cth_cthm/modules/meta/: cth.meta.concepts.cppm  cth.meta.coro.cppm  cth.meta.debug.cppm  cth.meta.functional.cppm  cth.meta.md.cppm  cth.meta.ranges.cppm  cth.meta.traits.cppm  cth.meta.tuple.cppm  cth.meta.utility.cppm  cth.meta.variadic.cppm  cth.meta.variant.cppm
cth_cthm/modules/meta/ranges/: cth.meta.ranges-decl.cppm  cth.meta.ranges-inl.cppm
cth_cthm/modules/meta/traits/: cth.meta.traits-decl.cppm  cth.meta.traits-inl.cppm  cth.meta.traits-packs.cppm
cth_cthm/modules/meta/variadic/: cth.meta.variadic-decl.cppm  cth.meta.variadic-inl.cppm
cth_integration_test/: CMakeLists.txt
cth_integration_test/src/io/: cth_log_test.cpp  cth_read_test.cpp  test.hpp
cth_test/: CMakeLists.txt
cth_test/src/: string_test.cpp  variant_test.cpp
cth_test/src/pointers/: move_ptr_test.cpp  not_null_test.cpp
cth_test/src/types/: md_test.cpp  ranges_test.cpp
cth_tests/: CMakeLists.txt
cth_tests/src/: cth_test.cpp  enums_test.cpp  format_test.cpp  hash_test.cpp  numeric_test.cpp  variant_test.cpp
cth_tests/src/algorithm/: algorithm_test.cpp  views_test.cpp
cth_tests/src/coro/: global_switch_test.cpp
cth_tests/src/data/: joiner_test.cpp  miniram_test.cpp  optional_test.cpp  poly_vector_test.cpp  pool_test.cpp  union_find_test.cpp
cth_tests/src/memory/: miniram_test.cpp
cth_tests/src/meta/: concepts_test.cpp  coro_test.cpp  enums_test.cpp  md_test.cpp  ranges_test.cpp  tuple_test.cpp  variadic_test.cpp
cth_tests/src/meta/traits/: trait_packs_test.cpp
cth_tests/src/pointers/: move_ptr_test.cpp  not_null_test.cpp
cth_tests/src/string/: joiner_test.cpp
cth_tests/src/types/: concepts_test.cpp  coro_test.cpp  enums_test.cpp  test.hpp  tuple_test.cpp
cth_win/: CMakeLists.txt
cth_win/incl/cth/win/: cmd.hpp  io.hpp  proc.hpp  screen.hpp  win_include.hpp  win_types.hpp  windows.hpp
cth_win/incl/cth/win/coro/: timer.hpp  (+1 more)
cth_win/src/: windows.cpp
cth_win/src/cth/win/: cmd.cpp  io.cpp  proc.cpp  screen.cpp  string.cpp  win_include.hpp  win_types.cpp  windows.cpp
cth_win/tests/: CMakeLists.txt
cth_win/unused/: event_hook.hpp  keyboard.hpp  win_types.hpp
cth_win/unused/old_keyboard_api/: event_hook.hpp  keyboard.hpp  window.hpp
cth_win/unused/old_keyboard_api/inl/: window.inl
cth_win_tests/: CMakeLists.txt
cth_win_tests/src/cth/win/: cmd_test.cpp  io_test.cpp  screen_test.cpp  string_test.cpp  test.hpp
cth_windows/: CMakeLists.txt
cth_windows/inl/: windows.inl
integration_tests/: CMakeLists.txt
integration_tests/excluded/windows/: keyboard_test.cpp  windows_test.cpp  windows_unbuffered_test.cpp
integration_tests/src/cth/io/: cth_console_test.cpp  cth_log_test.cpp  cth_read_test.cpp
integration_tests/src/cth/memory/: miniram_itest.cpp
integration_tests/src/cth/pointers/: not_null_test.cpp
integration_tests/src/cth_win/: cmd_test.cpp  io_test.cpp  screen_test.cpp  string_test.cpp  test.hpp  windows.cpp
(+395 files in other folders)
